i tried to fix the shifting, i give up

--- a/.config/matugen/templates/discord.css
+++ b/.config/matugen/templates/discord.css
@@ -227,7 +227,8 @@ body {
     --dms-icon-svg-transition: 0.4s ease; /* transition for the dms icon */
 
     /* top bar options */
-    --top-bar-height: var(--gap); /* height of the top bar (discord default is 36px, old discord style is 24px, var(--gap) recommended if button position is set to titlebar) */
+    --top-bar-height: 32px;
+    --custom-app-top-bar-height: var(--top-bar-height);
     --top-bar-button-position: titlebar; /* off: default position, hide: hide buttons completely, serverlist: move inbox button to server list, titlebar: move inbox button to channel titlebar (will hide title) */
     --top-bar-title-position: off; /* off: default centered position, hide: hide title completely, left: left align title (like old discord) */
     --subtle-top-bar-title: off; /* off: default, on: hide the icon and use subtle text color (like old discord) */
@@ -1861,12 +1862,6 @@ body {
     }
 }
 
-/* top-bar.css */
-body {
-    --top-bar-height: 32px;
-    --custom-app-top-bar-height: var(--top-bar-height);
-}
-
 @property --top-bar-button-position {
     syntax: 'off | hide | serverlist | titlebar';
     inherits: false;
@@ -3166,6 +3161,7 @@ div[data-list-id="profile-288633425303437312"]
     justify-content: var(--HSL-server-alignment);
 }
 #app-mount ._6e2b9359c6f84cfd-notice {
+    margin-top: -10px!important;
     height: var(--notices-height);
 }
 #app-mount ._6e2b9359c6f84cfd-notice + ._5e434347c823b592-content {
@@ -3228,4 +3224,11 @@ div[data-list-id="profile-288633425303437312"]
 ._5bc6a0adc149eda0-caret svg{
     fill: var(--accent-4)!important;
     stroke: var(--accent-4)!important;
+}
+
+#app-mount {
+    height: 100vh;
+    width: 100vw;
+    margin: 0;
+    padding: 0;
 }
